<resources>
    <string name="app_name">口袋问</string>
    <string name="report">举报</string>
    <string name="send">发送</string>
    <string name="anywhere">任意</string>
    <string name="near">附近</string>
    <string name="public_">公开</string>
    <string name="private_">非公开</string>
    <string name="secret">私密</string>

    <!--个人中心 -->
    <string name="person_title">个人中心</string>
    <string name="person_qb_count">%1$d 问币</string>
    <string name="person_my_respond">我的回答</string>
    <string name="person_my_questions">我的提问</string>
    <string name="person_feedback">反馈</string>
    <string name="person_about_us">关于我们</string>
    <string name="person_logout">退出登陆</string>

    <!--登陆 -->
    <string name="login_skip_login">随便答答 Skip -></string>
    <string name="login_username">登录名：</string>
    <string name="login_password">密&#8201;&#8201;&#8201;&#8201;&#8201;码：</string>
    <string name="login_verify_password">确认密码:</string>
    <string name="login_no_register">没有注册？</string>
    <string name="login_forgot_password">忘记密码？</string>
    <string name="login_login_failed">登录名或密码错误</string>
    <string name="login_register_failed">确认密码错误</string>
    <string name="login_empty_input">登录名或密码不能为空</string>

    <!--创建问题 -->
    <string name="create_title">新建问题</string>
    <string name="create_selector_hint">点击添加选项描述</string>
    <string name="create_question_hint">点击输入问题描述</string>
    <string name="create_selector_max_hint">选项文字不能超过16个字</string>
    <string name="create_question_max_hint">提问内容不能超过50个字</string>
    <string name="create_audio_min_hint">录音时间过短</string>
    <string name="create_delete_pic_hint">已删除图片</string>

    <!--预览问题 -->
    <string name="preview_pay_hint">支付问币让更多的人看到你的新信封哦</string>

    <!--收信 -->
    <string name="receiver_input_text_hint">点击回答</string>


    <!--我的提问 -->
    <string name="my_questions_remind_count">%1$d 回答</string>
    <string name="my_questions_title">我的提问</string>

    <!--我的回答 -->
    <string name="my_reminds_title">我的回答</string>

</resources>
