<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayblue"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.bear.pocketask.widget.titleview.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        app:titleText="@string/person_title"
        android:layout_height="wrap_content"
        app:titleMode="BACK_TITLE">

    </com.bear.pocketask.widget.titleview.TitleView>

    <com.bear.pocketask.widget.imageview.RoundImageView
        android:id="@+id/person_head_portrait"
        android:layout_width="@dimen/image_normal"
        android:layout_height="@dimen/image_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:src="@drawable/dfhead"
        app:RoundType="circle" />

    <TextView
        android:id="@+id/person_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/font_normal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:src="@drawable/money" />

        <TextView
            android:id="@+id/person_qb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="3000 问币"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/person_my_questions"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/button_white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_big"
            android:text="@string/person_my_questions"
            android:textColor="@color/deepblue"
            android:textSize="@dimen/font_normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/person_my_respond"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/padding_small"
        android:background="@drawable/button_white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_big"
            android:text="@string/person_my_respond"
            android:textColor="@color/deepblue"
            android:textSize="@dimen/font_normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/person_feedback"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_big"
            android:text="@string/person_feedback"
            android:textColor="@color/deepblue"
            android:textSize="@dimen/font_normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/person_about_us"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/padding_small"
        android:background="@drawable/button_white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_big"
            android:text="@string/person_about_us"
            android:textColor="@color/deepblue"
            android:textSize="@dimen/font_normal" />

    </RelativeLayout>

    <VideoView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/person_logout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/button_white"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_logout"
            android:textColor="@color/deepblue"
            android:textSize="@dimen/font_normal" />

    </RelativeLayout>
</LinearLayout>