<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayblue">

    <ImageView
        android:id="@+id/login_flag"
        android:layout_width="60dp"
        android:layout_height="125dp"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        android:src="@drawable/login" />

    <com.bear.pocketask.widget.cardview.AutoScaleLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big"
        app:scaleRate="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/page" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:orientation="vertical">


            <!-- 用户名 -->
            <LinearLayout
                android:id="@+id/login_username_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_username"
                    android:textColor="@color/deepblue"
                    android:textSize="@dimen/font_normal" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- 密码 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_username"
                    android:textColor="@color/deepblue"
                    android:textSize="@dimen/font_normal" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <!--提示 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/margin_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/login_no_register"
                    android:textColor="@color/deepblue"
                    android:textSize="@dimen/font_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/login_forgot_password"
                    android:textColor="@color/deepblue"
                    android:textSize="@dimen/font_small" />
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_big"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal">

            <ImageView
                android:layout_width="@dimen/image_small"
                android:layout_height="@dimen/image_small"
                android:layout_alignParentLeft="true"
                android:src="@drawable/qq" />

            <ImageView
                android:layout_width="@dimen/image_small"
                android:layout_height="@dimen/image_small"
                android:layout_centerHorizontal="true"
                android:src="@drawable/wechat" />

            <ImageView
                android:layout_width="@dimen/image_small"
                android:layout_height="@dimen/image_small"
                android:layout_alignParentRight="true"
                android:src="@drawable/webo" />
        </RelativeLayout>

    </com.bear.pocketask.widget.cardview.AutoScaleLayout>


    <com.bear.pocketask.widget.imageview.RoundImageView
        android:id="@+id/login_head_portrait"
        android:layout_width="@dimen/image_normal"
        android:layout_height="@dimen/image_normal"
        android:layout_above="@+id/card"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_big"
        android:src="@drawable/dfhead"
        app:RoundType="circle" />

    <TextView
        android:id="@+id/login_skip_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_big"
        android:text="@string/login_skip_login"
        android:textColor="@color/lightblue"
        android:textSize="@dimen/font_small" />


</RelativeLayout>